--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,5 @@
 stages:
   - build-n-push
-  # - push
-  # - deploy
 
 build-n-push:
   stage: build-n-push
@@ -11,24 +9,10 @@ build-n-push:
     - docker:dind
   image: docker
   script:
-    # - docker build --load -t $CI_REGISTRY_IMAGE .
     - docker login $CI_REGISTRY -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
     - docker build -t $CI_REGISTRY_IMAGE .
     - docker push $CI_REGISTRY_IMAGE
-
-# push:
-#   stage: push
-#   needs:
-#     - build
-#   script:
-#     # - docker login $CI_REGISTRY -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
-#     - docker push $CI_REGISTRY_IMAGE
-
-# deploy:
-#   stage: deploy
-#   script:
-#     - export KUBECONFIG=$HOME/.kube/config
-#     - echo "$KUBECONFIG_FILE" > $KUBECONFIG
-#     - kubectl delete pods --selector=app=airflow-streamlit -n airflow
-#   needs:
-#     - build
+  only:
+    changes:
+      - Dockerfile
+      - requirements.txt
