--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,54 @@
 version: '3'
 x-airflow-common:
   &airflow-common
-  image: registry.gitlab.com/lappis-unb/decidimbr/airflow-docker:latest
+  image: ${AIRFLOW_IMAGE_NAME:-registry.gitlab.com/lappis-unb/decidimbr/airflow-docker:latest}
   environment:
     &airflow-common-env
-    AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-    AIRFLOW__CORE__ENABLE_XCOM_PICKLING: 'true'
-    AIRFLOW__CORE__FERNET_KEY: 'Uqv6pwYWJn7xifR3QAkifMTkupos8mkxaQL2Q7Ydsqw='
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__CORE__DEFAULT_TIMEZONE: 'America/Sao_Paulo'
-    AIRFLOW__WEBSERVER__DEFAULT_UI_TIMEZONE: 'America/Sao_Paulo'
+    AIRFLOW__CORE__ENABLE_XCOM_PICKLING: 'true'
+    AIRFLOW__CORE__EXECUTOR: LocalExecutor
+    AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/${POSTGRES_DB:-airflow}
     AIRFLOW__EMAIL__DEFAULT_EMAIL_ON_RETRY: 'false'
     AIRFLOW__EMAIL__DEFAULT_EMAIL_ON_FAILURE: 'false'
+    AIRFLOW__WEBSERVER__DEFAULT_UI_TIMEZONE: 'America/Sao_Paulo'
+    AIRFLOW__WEBSERVER__INSTANCE_NAME: "Dev Env!"
+    AIRFLOW__WEBSERVER__NAVBAR_COLOR: '#82f6ce'
     AIRFLOW__WEBSERVER__SECRET_KEY: '42'
-    AIRFLOW__WEBSERVER__WORKERS: 1
-    AIRFLOW__WEBSERVER__NAVBAR_COLOR: "#9580ff"
     PYTHONPATH: '/opt/airflow/dags/airflow-dags'
   volumes:
+    # cluster policy config
+    - ./config/airflow_local_settings.py:/opt/airflow/config/airflow_local_settings.py
+    # dags
     - ../airflow-dags/dags:/opt/airflow/dags/airflow-dags
-
-  user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-0}"
+    # logs
+    - ./mnt/logs:/opt/airflow/logs
+  user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
+    &airflow-common-depends-on
     postgres:
       condition: service_healthy
 
 services:
   postgres:
-    image: postgres:15
+    image: ${POSTGRES_IMAGE_NAME:-postgres:15}
     environment:
-      POSTGRES_USER: airflow
-      POSTGRES_PASSWORD: airflow
-      POSTGRES_DB: airflow
+      POSTGRES_USER: ${POSTGRES_USER:-airflow}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-airflow}
+      POSTGRES_DB: ${POSTGRES_DB:-airflow}
     volumes:
-      - ./mnt/pgdata:/var/lib/postgresql/data
+      - ${DB_VOLUME}
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
-      interval: 5s
+      interval: 10s
       retries: 5
+      start_period: 5s
     restart: always
 
   airflow-webserver:
     <<: *airflow-common
     command: webserver
-    environment:
-      <<: *airflow-common-env
-      _AIRFLOW_DB_MIGRATE: 'true'
-      _AIRFLOW_WWW_USER_CREATE: 'true'
-      _AIRFLOW_WWW_USER_USERNAME: airflow
-      _AIRFLOW_WWW_USER_PASSWORD: airflow
     ports:
       - 8080:8080
     healthcheck:
@@ -61,10 +61,13 @@ services:
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
     restart: always
-    depends_on:
-      airflow-webserver:
-        condition: service_healthy
 
   minio:
     image: minio/minio
