--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ apache-airflow-providers-google
 apache-airflow-providers-odbc
 apache-airflow-providers-common-sql
 apache-airflow-providers-telegram
+apache-airflow-providers-smtp
 pandas==2.0.3
 beautifulsoup4==4.12.2
 tqdm==4.60.0
@@ -11,3 +12,4 @@ great-expectations==0.17.2
 ipdb==0.13.13
 pytest==7.4.0
 inflect==7.0.0
+boto3==1.34.19
