Adiciona apache-airflow-providers-postgres

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ apache-airflow-providers-odbc
 apache-airflow-providers-common-sql
 apache-airflow-providers-telegram
 apache-airflow-providers-smtp
+apache-airflow-providers-postgres
 pandas==2.0.3
 beautifulsoup4==4.12.2
 tqdm==4.60.0
