--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ ipdb==0.13.13
 pytest==7.4.0
 inflect==7.0.0
 boto3==1.34.19
+unidecode==1.3.8
+Jinja2==3.1.3
+weasyprint==57.1
+pybase64==1.3.2
+gobject==0.1.0
