--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AIRFLOW_IMAGE_NAME=registry.gitlab.com/lappis-unb/decidimbr/airflow-docker:latest
+AIRFLOW_IMAGE_NAME=registry.gitlab.com/lappis-unb/decidimbr/servicos-de-dados/airflow-docker
 AIRFLOW__CORE__FERNET_KEY='Uqv6pwYWJn7xifR3QAkifMTkupos8mkxaQL2Q7Ydsqw='
 AIRFLOW_UID=50000
 POSTGRES_IMAGE_NAME=postgres:15
