--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ x-airflow-common:
     # dags
     - ../airflow-dags/dags:/opt/airflow/dags/airflow-dags
     # logs
-    - ./mnt/logs:/opt/airflow/logs
+    #- ./mnt/logs:/opt/airflow/logs
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
