--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,7 @@
 stages:
   - build-n-push
 
-build-n-push:
+trigger_Airflow_Dags_pipeline:
   stage: build-n-push
-  tags:
-    - docker
-  services:
-    - docker:dind
-  image: docker
   script:
-    - docker login $CI_REGISTRY -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
-    - docker build -t $CI_REGISTRY_IMAGE .
-    - docker push $CI_REGISTRY_IMAGE
-  only:
-    changes:
-      - Dockerfile
-      - requirements.txt
+    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=development "https://gitlab.com/api/v4/projects/48841114/trigger/pipeline"'
