--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '3'
 x-airflow-common:
   &airflow-common
-  image: ${AIRFLOW_IMAGE_NAME:-registry.gitlab.com/lappis-unb/decidimbr/airflow-docker:latest}
+  image: ${AIRFLOW_IMAGE_NAME:-registry.gitlab.com/lappis-unb/decidimbr/servicos-de-dados/airflow-docker:latest}
+  build:
+    context: ..
+    dockerfile: airflow-docker/Dockerfile
   environment:
     &airflow-common-env
     AIRFLOW__CORE__DEFAULT_TIMEZONE: 'America/Sao_Paulo'
