feat(docker-compose): adiciona o dw ao docker compose

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ POSTGRES_IMAGE_NAME=postgres:15
 POSTGRES_USER=airflow
 POSTGRES_PASSWORD=airflow
 POSTGRES_DB=airflow
-DB_VOLUME=./mnt/pgdata:/var/lib/postgresql/data
+DB_VOLUME=./mnt/airflow/pgdata:/var/lib/postgresql/data
+DB_VOLUME_DW=./mnt/dw/pgdata:/var/lib/postgresql/data
 _AIRFLOW_WWW_USER_USERNAME=airflow
 _AIRFLOW_WWW_USER_PASSWORD=airflow
