build(docker-compose): troca o .env que o dw vai usar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,9 +55,9 @@ services:
   postgres-dw:
     image: ${POSTGRES_IMAGE_NAME:-postgres:15}
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-postgres}
+      POSTGRES_USER: ${POSTGRES_USER_DW:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_DW:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB_DW:-postgres}
     ports:
       - 5401:5432
     volumes:
