--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,17 +20,17 @@ x-airflow-common:
     AIRFLOW__WEBSERVER__INSTANCE_NAME: "Dev Env!"
     AIRFLOW__WEBSERVER__NAVBAR_COLOR: '#FFD700'
     AIRFLOW__WEBSERVER__SECRET_KEY: '42'
-    PYTHONPATH: '/opt/airflow/dags/airflow-dags'
+    PYTHONPATH: '${AIRFLOW_HOME}/dags/airflow-dags'
   volumes:
     # cluster policy config
-    - ./config/airflow_local_settings.py:/opt/airflow/config/airflow_local_settings.py
+    - ./config/airflow_local_settings.py:${AIRFLOW_HOME}/config/airflow_local_settings.py
     # dags
-    - ../airflow-dags/dags:/opt/airflow/dags/airflow-dags
+    - ../airflow-dags/dags:${AIRFLOW_HOME}/dags/airflow-dags
     # Plugins
-    - ../airflow-dags/plugins:/opt/airflow/dags/airflow-dags/plugins
+    - ../airflow-dags/plugins:${AIRFLOW_HOME}/dags/airflow-dags/plugins
     # logs
-    #- ./mnt/logs:/opt/airflow/logs
-    - ./mnt/dags-data:/dags-data
+    #- ./mnt/logs:${AIRFLOW_HOME}/logs
+    # - ./mnt/dags-data:${AIRFLOW_HOME}/dags-data
 
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
