chore(bugs): corrige pequenos erros de build

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ AIRFLOW_UID=50000
 # <---------- Postgres Default ---------->
 
 POSTGRES_IMAGE_NAME=postgres:15
+DB_VOLUME=./mnt/postgres/pgdata:/var/lib/postgresql/data
 
 
 # <---------- Postgres Airflow ---------->
@@ -17,11 +18,9 @@ POSTGRES_IMAGE_NAME=postgres:15
 POSTGRES_USER=airflow
 POSTGRES_PASSWORD=airflow
 POSTGRES_DB=airflow
-DB_VOLUME=./mnt/airflow/pgdata:/var/lib/postgresql/data
 
 
 # <---------- Postgres Data Warehouse ---------->
 POSTGRES_USER_DW=postgres
 POSTGRES_PASSWORD_DW=postgres
 POSTGRES_DB_DW=data_warehouse
-DB_VOLUME_DW=./mnt/dw/pgdata:/var/lib/postgresql/data
