--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ x-airflow-common:
     AIRFLOW__EMAIL__DEFAULT_EMAIL_ON_RETRY: 'false'
     AIRFLOW__EMAIL__DEFAULT_EMAIL_ON_FAILURE: 'false'
     AIRFLOW__WEBSERVER__DEFAULT_UI_TIMEZONE: 'America/Sao_Paulo'
-    AIRFLOW__WEBSERVER__INSTANCE_NAME: "Dev Env!"
-    AIRFLOW__WEBSERVER__NAVBAR_COLOR: '#FFD700'
+    AIRFLOW__WEBSERVER__INSTANCE_NAME: "Lappis - Local Dev Env!"
+    AIRFLOW__WEBSERVER__NAVBAR_COLOR: '#98DFFF'
     AIRFLOW__WEBSERVER__SECRET_KEY: '42'
     PYTHONPATH: '${AIRFLOW_HOME}/dags/airflow-dags'
   volumes:
