--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,8 +53,9 @@ services:
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 10s
+      timeout: 60s
+      start_period: 60s
       retries: 5
-      start_period: 5s
     restart: always
 
   airflow-webserver:
