--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,14 +21,14 @@ x-airflow-common:
     AIRFLOW__WEBSERVER__NAVBAR_COLOR: '#98DFFF'
     AIRFLOW__WEBSERVER__SECRET_KEY: '42'
     AIRFLOW__CORE__TEST_CONNECTION: Enabled
-    PYTHONPATH: '${AIRFLOW_HOME}/dags/airflow-dags'
+    PYTHONPATH: '${AIRFLOW_HOME}/dags/airflow-dags:${AIRFLOW_HOME}/plugins'
   volumes:
     # cluster policy config
     - ./config/airflow_local_settings.py:${AIRFLOW_HOME}/config/airflow_local_settings.py
     # dags
     - ../airflow-dags/dags:${AIRFLOW_HOME}/dags/airflow-dags
     # Plugins
-    - ../airflow-dags/plugins:${AIRFLOW_HOME}/dags/airflow-dags/plugins
+    - ../airflow-dags/plugins:${AIRFLOW_HOME}/plugins/plugins
     # Jupyter
     - ../jupyter-notebooks/:/opt/airflow/notebooks
     # logs
