--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,3 @@
-stages:
-  - build
-  - deploy
-
-
 # <------------- Continuous Deploy ------------->
 
 build-image:
@@ -22,12 +17,16 @@ build-image:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
     - if: $CI_COMMIT_REF_PROTECTED == "true"
   script:
-    - echo "---------- install git ----------"
+    - echo "---------- Install git ----------"
     - apk update
 
+    - echo "---------- Docker pull for cache ----------"
+    - docker login $CI_REGISTRY -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
+    - docker pull $CI_REGISTRY_IMAGE:latest || true
+
     - echo "--------- Building the image ----------"
-    - docker build --target airflow-deploy-infra -t $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA .
-    - docker save -o build.img $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
+    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --target airflow-deploy-infra -t $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA --build-arg enviroment=development .
+    - docker save -o build.img $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
 
 push-image-to-registry:
   stage: deploy
@@ -39,10 +38,14 @@ push-image-to-registry:
   inherit:
     default: false
   rules:
-    - if: $CI_COMMIT_BRANCH == "development"
+    - if: $CI_COMMIT_REF_NAME == "development"
+    - if: $CI_COMMIT_REF_NAME == "main"
   dependencies:
     - build-image
   script:
     - docker load -i build.img
     - docker login $CI_REGISTRY -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
+    - docker push $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
+
+    - docker tag $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
+    - docker push $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
