--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,42 +1,37 @@
 # <------------- Continuous Deploy ------------->
-
-build-image:
-  stage: build
+default:
   tags:
     - docker
   services:
     - docker:dind
+  image: docker
+  before_script:
+    - echo "---------- Install git ----------"
+    - apk update
+    - apk add git
+    - export DOCKER_TAG=docker-${CI_COMMIT_SHORT_SHA}-dags-$(git ls-remote https://gitlab.com/lappis-unb/decidimbr/servicos-de-dados/airflow-dags refs/heads/development | cut -c 1-7)
+
+build-image:
+  stage: build
   artifacts:
     paths:
       - build.img
     expire_in: 1 hour
-  image: docker
-  inherit:
-    default: false
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
     - if: $CI_COMMIT_REF_PROTECTED == "true"
   script:
-    - echo "---------- Install git ----------"
-    - apk update
-
     - echo "---------- Docker pull for cache ----------"
     - docker login $CI_REGISTRY -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
     - docker pull $CI_REGISTRY_IMAGE:latest || true
 
     - echo "--------- Building the image ----------"
-    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --target airflow-deploy-infra -t $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA --build-arg enviroment=development .
-    - docker save -o build.img $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
+    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --target airflow-deploy-infra -t $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:${DOCKER_TAG} .
+    - docker save -o build.img $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:${DOCKER_TAG}
+
 
 push-image-to-registry:
   stage: deploy
-  tags:
-    - docker
-  services:
-    - docker:dind
-  image: docker
-  inherit:
-    default: false
   rules:
     - if: $CI_COMMIT_REF_NAME == "development"
     - if: $CI_COMMIT_REF_NAME == "main"
@@ -45,7 +40,7 @@ push-image-to-registry:
   script:
     - docker load -i build.img
     - docker login $CI_REGISTRY -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
-    - docker push $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
+    - docker push $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:${DOCKER_TAG}
 
-    - docker tag $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
+    - docker tag $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:${DOCKER_TAG} $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
     - docker push $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
